Kuber/files/1.5/deploy-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-back
  labels:
    app: app-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-back
  template:
    metadata:
      labels:
        app: app-back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
        - containerPort: 11443
