Kuber/files/1.5/deploy-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-front
  labels:
    app: app-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
