Kuber/files/1.5/service-b.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
spec:
  selector:
    app: app-back
  ports:
    - name: multitool-http
      protocol: TCP
      port: 8080
      targetPort: 8080
