Kuber/files/1.5/service-f.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  selector:
    app: app-front
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
