Kuber/files/1.5/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: test.dz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-back
                port:
                  number: 8080
